# NickClips

./: .dockerignore  .env.example  .gitignore  DOCKGE.md  Dockerfile  Dockerfile.simple  INSTALL.md  README.md  app.py  compose.yaml  docker-compose.dockge.yml  docker-compose.yml  docker-install-ytdlp.sh  dockge-setup-ytdlp.sh  downloader.py  emergency_install_ytdlp.py  forms.py  install_yt_dlp.sh  migrations.py  models.py  pyproject.toml  replit.nix  requirements.txt  routes.py  setup.sh  test_ytdlp.py  video_processor.py
attached_assets/: Pasted--19-Apr-2025-00-23-12-GET-video-6ec44814-HTTP-1-1-200-INFO-werkzeug-192-168-1-207-19-A-1745022243422.txt  Pasted--nickclips-web-1-nickclips-web-1745345327457.txt  Pasted-INFO-werkzeug-WARNING-This-is-a-development-server-Do-not-use-it-in-a-production-deployment-Use-a-1745032812200.txt  Pasted-casaos-casaos-NickClips-sudo-docker-run-p-5000-5000-v-PWD-uploads-uploads-e-SESSION--1744994004627.txt  Pasted-casaos-casaos-NickClips-sudo-docker-run-p-5000-5000-v-PWD-uploads-uploads-e-SESSION-SECRET-s-1745033639378.txt  Pasted-nickclips-db-1-2025-04-20-16-53-10-304-UTC-1-LOG-aborting-any-active-transactions-nickclips--1745172625247.txt  Pasted-nickclips-db-1-2025-04-20-22-30-35-291-UTC-37-FATAL-terminating-connection-due-to-administra-1745327191458.txt  Pasted-nickclips-web-1-DEBUG-video-processor-Creating-HLS-stream-from-app-uploads-processed-dd4f19dc-mp-1745326769295.txt  Pasted-nickclips-web-1-debug-Plugin-directories-none-nickclips-web-1-debug-Loaded-1850-extractor-1745328514616.txt  (+3 more)
templates/: dashboard.html  index.html  login.html  (+4 more)
(+19 files in other folders)
