[tool.poetry]
name = "video-share-platform"
version = "0.1.0"
description = "A lightweight self-hosted video sharing platform similar to Streamable"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
email-validator = ">=2.2.0"
ffmpeg-python = ">=0.2.0"
flask-login = ">=0.6.3"
flask = ">=3.1.0"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
psycopg2-binary = ">=2.9.10"
sqlalchemy = ">=2.0.40"
werkzeug = ">=3.1.3"
flask-wtf = ">=1.2.2"
trafilatura = ">=2.0.0"
wtforms = ">=3.2.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
